--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -44,27 +44,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ItemData\AppliedAttributeJson.cs" />
-    <Compile Include="ItemData\SpellStringJson.cs" />
-    <Compile Include="ItemData\SpellStringLookupJson.cs" />
-    <Compile Include="ItemData\UnusualEffectJson.cs" />
-    <Compile Include="ItemData\AttributeDescriptionFormats.cs" />
-    <Compile Include="ItemData\AttributeJson.cs" />
-    <Compile Include="ItemData\CapabilitiesJson.cs" />
-    <Compile Include="ItemData\ItemPerClassLoadoutSlotJson.cs" />
-    <Compile Include="ItemData\ItemSetJson.cs" />
-    <Compile Include="ItemData\ItemSlots.cs" />
-    <Compile Include="ItemData\ItemToolDataJson.cs" />
-    <Compile Include="ItemData\StrangeLevelingSystemJson.cs" />
-    <Compile Include="ItemData\StrangeLevelJson.cs" />
-    <Compile Include="ItemData\StrangePartJson.cs" />
-    <Compile Include="ItemData\TF2DataJson.cs" />
-    <Compile Include="ItemData\TF2DataResultJson.cs" />
-    <Compile Include="ItemData\ItemJson.cs" />
-    <Compile Include="ItemData\OriginJson.cs" />
-    <Compile Include="ItemData\QualitiesListJson.cs" />
-    <Compile Include="ItemData\QualitiesNameListJson.cs" />
-    <Compile Include="ItemData\StyleJson.cs" />
+    <Compile Include="ItemDataJson\AppliedAttributeJson.cs" />
+    <Compile Include="ItemDataJson\SpellStringJson.cs" />
+    <Compile Include="ItemDataJson\SpellStringLookupJson.cs" />
+    <Compile Include="ItemDataJson\UnusualEffectJson.cs" />
+    <Compile Include="ItemDataJson\AttributeDescriptionFormats.cs" />
+    <Compile Include="ItemDataJson\AttributeJson.cs" />
+    <Compile Include="ItemDataJson\CapabilitiesJson.cs" />
+    <Compile Include="ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
+    <Compile Include="ItemDataJson\ItemSetJson.cs" />
+    <Compile Include="ItemDataJson\ItemSlots.cs" />
+    <Compile Include="ItemDataJson\ItemToolDataJson.cs" />
+    <Compile Include="ItemDataJson\StrangeLevelingSystemJson.cs" />
+    <Compile Include="ItemDataJson\StrangeLevelJson.cs" />
+    <Compile Include="ItemDataJson\StrangePartJson.cs" />
+    <Compile Include="ItemDataJson\TF2DataJson.cs" />
+    <Compile Include="ItemDataJson\TF2DataResultJson.cs" />
+    <Compile Include="ItemDataJson\ItemJson.cs" />
+    <Compile Include="ItemDataJson\OriginJson.cs" />
+    <Compile Include="ItemDataJson\QualitiesListJson.cs" />
+    <Compile Include="ItemDataJson\QualitiesNameListJson.cs" />
+    <Compile Include="ItemDataJson\StyleJson.cs" />
     <Compile Include="ItemQuality.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PriceData.cs" />
