--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -44,6 +44,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ItemAttribute.cs" />
+    <Compile Include="ItemSet.cs" />
+    <Compile Include="PlayerClasses.cs" />
+    <Compile Include="Item.cs" />
     <Compile Include="ItemDataJson\AppliedAttributeJson.cs" />
     <Compile Include="ItemDataJson\SpellStringJson.cs" />
     <Compile Include="ItemDataJson\SpellStringLookupJson.cs" />
@@ -53,7 +57,7 @@
     <Compile Include="ItemDataJson\CapabilitiesJson.cs" />
     <Compile Include="ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
     <Compile Include="ItemDataJson\ItemSetJson.cs" />
-    <Compile Include="ItemDataJson\ItemSlots.cs" />
+    <Compile Include="ItemSlots.cs" />
     <Compile Include="ItemDataJson\ItemToolDataJson.cs" />
     <Compile Include="ItemDataJson\StrangeLevelingSystemJson.cs" />
     <Compile Include="ItemDataJson\StrangeLevelJson.cs" />
@@ -65,17 +69,21 @@
     <Compile Include="ItemDataJson\QualitiesListJson.cs" />
     <Compile Include="ItemDataJson\QualitiesNameListJson.cs" />
     <Compile Include="ItemDataJson\StyleJson.cs" />
-    <Compile Include="ItemQuality.cs" />
+    <Compile Include="ItemQualities.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="PriceData.cs" />
+    <Compile Include="PriceDataJson\BPTFPriceDataJson.cs" />
+    <Compile Include="PriceDataJson\BPTFPriceDataResponseJson.cs" />
+    <Compile Include="PriceDataJson\PriceIndexJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StrangePart.cs" />
+    <Compile Include="TF2Data.cs" />
+    <Compile Include="UnusualEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="PriceData\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
