--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -73,7 +73,7 @@
     <Compile Include="Logger.cs" />
     <Compile Include="ItemPricing.cs" />
     <Compile Include="Price.cs" />
-    <Compile Include="PriceData.cs" />
+    <Compile Include="BpTfPriceData.cs" />
     <Compile Include="PriceDataJson\CraftibilityJson.cs" />
     <Compile Include="PriceDataJson\QualityPriceDataJson.cs" />
     <Compile Include="PriceDataJson\TradabilityJson.cs" />
