--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="HtmlAgilityPack, Version=1.4.9.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
+      <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -45,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppliedInstanceAttribute.cs" />
+    <Compile Include="ClassifiedsListing.cs" />
+    <Compile Include="ClassifiedsScraper.cs" />
     <Compile Include="TF2BackpackData.cs" />
     <Compile Include="BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="BackpackDataJson\EquipInfoJson.cs" />
