--- a/BackpackTFPriceLister/SealedTradeBot/SealedTradeBot.csproj
+++ b/BackpackTFPriceLister/SealedTradeBot/SealedTradeBot.csproj
@@ -76,6 +76,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BackpackTFPriceLister\BackpackTFPriceLister.csproj">
+      <Project>{b8611d7a-b36d-4422-8e3f-7ffa2a3a9ef2}</Project>
+      <Name>BackpackTFPriceLister</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SteamWebAPI\SteamWebAPI.csproj">
       <Project>{d846d108-d95b-4488-ba01-e487da220c17}</Project>
       <Name>SteamWebAPI</Name>
