--- a/BackpackTFPriceLister/BackpackTFPriceLister/packages.config
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" userInstalled="true" />
-  <package id="Newtonsoft.Json" version="8.0.1-beta1" targetFramework="net452" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" userInstalled="true" />
 </packages>
