--- a/BackpackTFPriceLister/SealedTradeBot/SealedTradeBot.csproj
+++ b/BackpackTFPriceLister/SealedTradeBot/SealedTradeBot.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,13 +61,18 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetDescription.cs" />
+    <Compile Include="BotEventManager.cs" />
     <Compile Include="BotLogger.cs" />
+    <Compile Include="BotSubscribeEventAttribute.cs" />
     <Compile Include="ChatManager.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="LogonSample.cs" />
     <Compile Include="OfferManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SealedBot.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="SteamGuardEventArgs.cs" />
     <Compile Include="TradeAsset.cs" />
     <Compile Include="TradeOffer.cs" />
     <Compile Include="Util.cs" />
