--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -51,7 +51,9 @@
     <Compile Include="AppliedInstanceAttribute.cs" />
     <Compile Include="ClassifiedsListing.cs" />
     <Compile Include="ClassifiedsScraper.cs" />
+    <Compile Include="ItemSale.cs" />
     <Compile Include="DealFinder.cs" />
+    <Compile Include="MarketDataJson\SteamMarketDataJson.cs" />
     <Compile Include="TF2BackpackData.cs" />
     <Compile Include="BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="BackpackDataJson\EquipInfoJson.cs" />
