Added Market Price Mechanics

--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -51,11 +51,18 @@
     <Compile Include="AppliedInstanceAttribute.cs" />
     <Compile Include="ClassifiedsListing.cs" />
     <Compile Include="ClassifiedsScraper.cs" />
+    <Compile Include="GunMettleSkins.cs" />
     <Compile Include="ItemSale.cs" />
     <Compile Include="DealFinder.cs" />
+    <Compile Include="KillstreakTypes.cs" />
     <Compile Include="MarketPriceData.cs" />
-    <Compile Include="MarketPricesJson\MarketPricesJson.cs" />
+    <Compile Include="MarketPricesJson\MarketPriceDataJson.cs" />
     <Compile Include="MarketPricesJson\MarketPricesResponseJson.cs" />
+    <Compile Include="MarketPricesJson\MarketPricingJson.cs" />
+    <Compile Include="MarketPricing.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="Skin.cs" />
+    <Compile Include="SkinWears.cs" />
     <Compile Include="TF2BackpackData.cs" />
     <Compile Include="BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="BackpackDataJson\EquipInfoJson.cs" />
