Moved JSON classes

--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -56,59 +56,59 @@
     <Compile Include="DealFinder.cs" />
     <Compile Include="KillstreakTypes.cs" />
     <Compile Include="MarketPriceData.cs" />
-    <Compile Include="MarketPricesJson\MarketPriceDataJson.cs" />
-    <Compile Include="MarketPricesJson\MarketPricesResponseJson.cs" />
-    <Compile Include="MarketPricesJson\MarketPricingJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPriceDataJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPricesResponseJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPricingJson.cs" />
     <Compile Include="MarketPricing.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Skin.cs" />
     <Compile Include="SkinWears.cs" />
     <Compile Include="TF2BackpackData.cs" />
-    <Compile Include="BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
-    <Compile Include="BackpackDataJson\EquipInfoJson.cs" />
-    <Compile Include="BackpackDataJson\ItemInstanceJson.cs" />
-    <Compile Include="BackpackDataJson\TF2BackpackJson.cs" />
-    <Compile Include="BackpackDataJson\TF2BackpackResultJson.cs" />
+    <Compile Include="Json\BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
+    <Compile Include="Json\BackpackDataJson\EquipInfoJson.cs" />
+    <Compile Include="Json\BackpackDataJson\ItemInstanceJson.cs" />
+    <Compile Include="Json\BackpackDataJson\TF2BackpackJson.cs" />
+    <Compile Include="Json\BackpackDataJson\TF2BackpackResultJson.cs" />
     <Compile Include="CommandHandler.cs" />
     <Compile Include="ItemAttribute.cs" />
     <Compile Include="ItemInstance.cs" />
     <Compile Include="ItemSet.cs" />
     <Compile Include="PlayerClasses.cs" />
     <Compile Include="Item.cs" />
-    <Compile Include="ItemDataJson\AppliedAttributeJson.cs" />
-    <Compile Include="ItemDataJson\SpellStringJson.cs" />
-    <Compile Include="ItemDataJson\SpellStringLookupJson.cs" />
-    <Compile Include="ItemDataJson\UnusualEffectJson.cs" />
-    <Compile Include="ItemDataJson\AttributeDescriptionFormats.cs" />
-    <Compile Include="ItemDataJson\AttributeJson.cs" />
-    <Compile Include="ItemDataJson\CapabilitiesJson.cs" />
-    <Compile Include="ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
-    <Compile Include="ItemDataJson\ItemSetJson.cs" />
+    <Compile Include="Json\ItemDataJson\AppliedAttributeJson.cs" />
+    <Compile Include="Json\ItemDataJson\SpellStringJson.cs" />
+    <Compile Include="Json\ItemDataJson\SpellStringLookupJson.cs" />
+    <Compile Include="Json\ItemDataJson\UnusualEffectJson.cs" />
+    <Compile Include="Json\ItemDataJson\AttributeDescriptionFormats.cs" />
+    <Compile Include="Json\ItemDataJson\AttributeJson.cs" />
+    <Compile Include="Json\ItemDataJson\CapabilitiesJson.cs" />
+    <Compile Include="Json\ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
+    <Compile Include="Json\ItemDataJson\ItemSetJson.cs" />
     <Compile Include="ItemSlots.cs" />
-    <Compile Include="ItemDataJson\ItemToolDataJson.cs" />
-    <Compile Include="ItemDataJson\StrangeLevelingSystemJson.cs" />
-    <Compile Include="ItemDataJson\StrangeLevelJson.cs" />
-    <Compile Include="ItemDataJson\StrangePartJson.cs" />
-    <Compile Include="ItemDataJson\TF2DataJson.cs" />
-    <Compile Include="ItemDataJson\TF2DataResultJson.cs" />
-    <Compile Include="ItemDataJson\ItemJson.cs" />
-    <Compile Include="ItemDataJson\OriginJson.cs" />
-    <Compile Include="ItemDataJson\QualitiesListJson.cs" />
-    <Compile Include="ItemDataJson\QualitiesNameListJson.cs" />
-    <Compile Include="ItemDataJson\StyleJson.cs" />
+    <Compile Include="Json\ItemDataJson\ItemToolDataJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangeLevelingSystemJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangeLevelJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangePartJson.cs" />
+    <Compile Include="Json\ItemDataJson\TF2DataJson.cs" />
+    <Compile Include="Json\ItemDataJson\TF2DataResultJson.cs" />
+    <Compile Include="Json\ItemDataJson\ItemJson.cs" />
+    <Compile Include="Json\ItemDataJson\OriginJson.cs" />
+    <Compile Include="Json\ItemDataJson\QualitiesListJson.cs" />
+    <Compile Include="Json\ItemDataJson\QualitiesNameListJson.cs" />
+    <Compile Include="Json\ItemDataJson\StyleJson.cs" />
     <Compile Include="ItemQualities.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="ItemPricing.cs" />
     <Compile Include="Price.cs" />
     <Compile Include="BpTfPriceData.cs" />
-    <Compile Include="PriceDataJson\CraftibilityJson.cs" />
-    <Compile Include="PriceDataJson\QualityPriceDataJson.cs" />
-    <Compile Include="PriceDataJson\TradabilityJson.cs" />
-    <Compile Include="PriceDataJson\TypeIndexPricingJson.cs" />
+    <Compile Include="Json\PriceDataJson\CraftibilityJson.cs" />
+    <Compile Include="Json\PriceDataJson\QualityPriceDataJson.cs" />
+    <Compile Include="Json\PriceDataJson\TradabilityJson.cs" />
+    <Compile Include="Json\PriceDataJson\TypeIndexPricingJson.cs" />
     <Compile Include="DataManager.cs" />
-    <Compile Include="PriceDataJson\BPTFPriceDataJson.cs" />
-    <Compile Include="PriceDataJson\BPTFPriceDataResponseJson.cs" />
-    <Compile Include="PriceDataJson\ItemPriceJson.cs" />
+    <Compile Include="Json\PriceDataJson\BPTFPriceDataJson.cs" />
+    <Compile Include="Json\PriceDataJson\BPTFPriceDataResponseJson.cs" />
+    <Compile Include="Json\PriceDataJson\ItemPriceJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StrangePart.cs" />
     <Compile Include="TF2Data.cs" />
