Moved stuff around

--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -48,33 +48,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppliedInstanceAttribute.cs" />
-    <Compile Include="ClassifiedsListing.cs" />
-    <Compile Include="ClassifiedsScraper.cs" />
-    <Compile Include="GunMettleSkins.cs" />
-    <Compile Include="ItemSale.cs" />
-    <Compile Include="DealFinder.cs" />
-    <Compile Include="KillstreakTypes.cs" />
-    <Compile Include="MarketPriceData.cs" />
+    <Compile Include="Enums\AttributeEffectTypes.cs" />
+    <Compile Include="Items\AppliedInstanceAttribute.cs" />
+    <Compile Include="Classifieds\ClassifiedsListing.cs" />
+    <Compile Include="Classifieds\ClassifiedsScraper.cs" />
+    <Compile Include="Items\GunMettleSkins.cs" />
+    <Compile Include="Classifieds\ItemSale.cs" />
+    <Compile Include="Classifieds\DealFinder.cs" />
+    <Compile Include="Enums\KillstreakTypes.cs" />
+    <Compile Include="Lookup\MarketPriceData.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPriceDataJson.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPricesResponseJson.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPricingJson.cs" />
-    <Compile Include="MarketPricing.cs" />
-    <Compile Include="Settings.cs" />
-    <Compile Include="Skin.cs" />
-    <Compile Include="SkinWears.cs" />
-    <Compile Include="TF2BackpackData.cs" />
+    <Compile Include="Market\MarketPricing.cs" />
+    <Compile Include="Utils\Settings.cs" />
+    <Compile Include="Items\Skin.cs" />
+    <Compile Include="Enums\SkinWears.cs" />
+    <Compile Include="Backpack\TF2BackpackData.cs" />
     <Compile Include="Json\BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="Json\BackpackDataJson\EquipInfoJson.cs" />
     <Compile Include="Json\BackpackDataJson\ItemInstanceJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackResultJson.cs" />
-    <Compile Include="CommandHandler.cs" />
-    <Compile Include="ItemAttribute.cs" />
-    <Compile Include="ItemInstance.cs" />
-    <Compile Include="ItemSet.cs" />
-    <Compile Include="PlayerClasses.cs" />
-    <Compile Include="Item.cs" />
+    <Compile Include="Core\CommandHandler.cs" />
+    <Compile Include="Items\ItemAttribute.cs" />
+    <Compile Include="Items\ItemInstance.cs" />
+    <Compile Include="Items\ItemSet.cs" />
+    <Compile Include="Enums\PlayerClasses.cs" />
+    <Compile Include="Items\Item.cs" />
     <Compile Include="Json\ItemDataJson\AppliedAttributeJson.cs" />
     <Compile Include="Json\ItemDataJson\SpellStringJson.cs" />
     <Compile Include="Json\ItemDataJson\SpellStringLookupJson.cs" />
@@ -84,7 +85,7 @@
     <Compile Include="Json\ItemDataJson\CapabilitiesJson.cs" />
     <Compile Include="Json\ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
     <Compile Include="Json\ItemDataJson\ItemSetJson.cs" />
-    <Compile Include="ItemSlots.cs" />
+    <Compile Include="Enums\ItemSlots.cs" />
     <Compile Include="Json\ItemDataJson\ItemToolDataJson.cs" />
     <Compile Include="Json\ItemDataJson\StrangeLevelingSystemJson.cs" />
     <Compile Include="Json\ItemDataJson\StrangeLevelJson.cs" />
@@ -96,11 +97,11 @@
     <Compile Include="Json\ItemDataJson\QualitiesListJson.cs" />
     <Compile Include="Json\ItemDataJson\QualitiesNameListJson.cs" />
     <Compile Include="Json\ItemDataJson\StyleJson.cs" />
-    <Compile Include="ItemQualities.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="ItemPricing.cs" />
-    <Compile Include="Price.cs" />
-    <Compile Include="BpTfPriceData.cs" />
+    <Compile Include="Enums\ItemQualities.cs" />
+    <Compile Include="Utils\Logger.cs" />
+    <Compile Include="Classifieds\ItemPricing.cs" />
+    <Compile Include="Core\Price.cs" />
+    <Compile Include="Lookup\BpTfPriceData.cs" />
     <Compile Include="Json\PriceDataJson\CraftibilityJson.cs" />
     <Compile Include="Json\PriceDataJson\QualityPriceDataJson.cs" />
     <Compile Include="Json\PriceDataJson\TradabilityJson.cs" />
@@ -110,10 +111,10 @@
     <Compile Include="Json\PriceDataJson\BPTFPriceDataResponseJson.cs" />
     <Compile Include="Json\PriceDataJson\ItemPriceJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StrangePart.cs" />
-    <Compile Include="TF2Data.cs" />
-    <Compile Include="UnusualEffect.cs" />
-    <Compile Include="Util.cs" />
+    <Compile Include="Items\StrangePart.cs" />
+    <Compile Include="Lookup\TF2Data.cs" />
+    <Compile Include="Items\UnusualEffect.cs" />
+    <Compile Include="Utils\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
