--- a/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
+++ b/BackpackTFPriceLister/BackpackTFPriceLister/BackpackTFPriceLister.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Classifieds\ItemSale.cs" />
     <Compile Include="Classifieds\DealFinder.cs" />
     <Compile Include="Enums\KillstreakTypes.cs" />
-    <Compile Include="Lookup\MarketPriceData.cs" />
+    <Compile Include="Lookup\MarketReference.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPriceDataJson.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPricesResponseJson.cs" />
     <Compile Include="Json\MarketPricesJson\MarketPricingJson.cs" />
@@ -64,7 +64,7 @@
     <Compile Include="Utils\Settings.cs" />
     <Compile Include="Items\Skin.cs" />
     <Compile Include="Enums\SkinWears.cs" />
-    <Compile Include="Backpack\TF2BackpackData.cs" />
+    <Compile Include="Backpack\Backpack.cs" />
     <Compile Include="Json\BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="Json\BackpackDataJson\EquipInfoJson.cs" />
     <Compile Include="Json\BackpackDataJson\ItemInstanceJson.cs" />
@@ -101,7 +101,7 @@
     <Compile Include="Utils\Logger.cs" />
     <Compile Include="Classifieds\ItemPricing.cs" />
     <Compile Include="Price.cs" />
-    <Compile Include="Lookup\BpTfPriceData.cs" />
+    <Compile Include="Lookup\PriceReference.cs" />
     <Compile Include="Json\PriceDataJson\CraftibilityJson.cs" />
     <Compile Include="Json\PriceDataJson\QualityPriceDataJson.cs" />
     <Compile Include="Json\PriceDataJson\TradabilityJson.cs" />
@@ -112,7 +112,7 @@
     <Compile Include="Json\PriceDataJson\ItemPriceJson.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Items\StrangePart.cs" />
-    <Compile Include="Lookup\TF2Data.cs" />
+    <Compile Include="Lookup\GameSchema.cs" />
     <Compile Include="Items\UnusualEffect.cs" />
     <Compile Include="Utils\Util.cs" />
   </ItemGroup>
