--- a/BackpackTFPriceLister/PriceListConsole/BackpackTFConsole.csproj
+++ b/BackpackTFPriceLister/PriceListConsole/BackpackTFConsole.csproj
@@ -57,9 +57,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BackpackTFPriceLister\BackpackTFPriceLister.csproj">
+    <ProjectReference Include="..\BackpackTFPriceLister\CustomSteamTools.csproj">
       <Project>{b8611d7a-b36d-4422-8e3f-7ffa2a3a9ef2}</Project>
-      <Name>BackpackTFPriceLister</Name>
+      <Name>CustomSteamTools</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
