--- a/CustomSteamTools/PriceListConsole/BackpackTFConsole.csproj
+++ b/CustomSteamTools/PriceListConsole/BackpackTFConsole.csproj
@@ -40,6 +40,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CustomConsoleColors.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
