--- a/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
+++ b/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
@@ -35,7 +35,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\Net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -46,8 +46,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UltimateUtil, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\UltimateUtil.1.0.0.1\lib\UltimateUtil.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\CmdHelp.cs" />
+    <Compile Include="Commands\CmdInfo.cs" />
+    <Compile Include="Commands\CommandHandler.cs" />
+    <Compile Include="Commands\ITradeCommand.cs" />
     <Compile Include="Enums\AttributeEffectTypes.cs" />
     <Compile Include="Items\AppliedInstanceAttribute.cs" />
     <Compile Include="Classifieds\ClassifiedsListing.cs" />
@@ -70,7 +78,7 @@
     <Compile Include="Json\BackpackDataJson\ItemInstanceJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackResultJson.cs" />
-    <Compile Include="CommandHandler.cs" />
+    <Compile Include="CommandHandlerOld.cs" />
     <Compile Include="Items\ItemAttribute.cs" />
     <Compile Include="Items\ItemInstance.cs" />
     <Compile Include="Items\ItemSet.cs" />
@@ -98,7 +106,7 @@
     <Compile Include="Json\ItemDataJson\QualitiesNameListJson.cs" />
     <Compile Include="Json\ItemDataJson\StyleJson.cs" />
     <Compile Include="Enums\ItemQualities.cs" />
-    <Compile Include="Utils\Logger.cs" />
+    <Compile Include="Utils\LoggerOld.cs" />
     <Compile Include="Classifieds\ItemPricing.cs" />
     <Compile Include="Price.cs" />
     <Compile Include="Lookup\PriceReference.cs" />
