--- a/CustomSteamTools/PriceListConsole/BackpackTFConsole.csproj
+++ b/CustomSteamTools/PriceListConsole/BackpackTFConsole.csproj
@@ -48,6 +48,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UltimateUtil, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\UltimateUtil.1.0.0.1\lib\UltimateUtil.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
