--- a/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
+++ b/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B8611D7A-B36D-4422-8E3F-7FFA2A3A9EF2}</ProjectGuid>
+    <ProjectGuid>{41B19086-BC2A-4035-BB99-E17DFF7567DC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CustomSteamTools</RootNamespace>
     <AssemblyName>CustomSteamTools</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -35,7 +36,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\Net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -52,82 +53,81 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backpack\Backpack.cs" />
+    <Compile Include="Classifieds\ClassifiedsListing.cs" />
+    <Compile Include="Classifieds\ClassifiedsScraper.cs" />
+    <Compile Include="Classifieds\DealFinder.cs" />
+    <Compile Include="Classifieds\ItemPricing.cs" />
+    <Compile Include="Classifieds\ItemSale.cs" />
+    <Compile Include="CommandHandlerOld.cs" />
     <Compile Include="Commands\CmdHelp.cs" />
     <Compile Include="Commands\CmdInfo.cs" />
     <Compile Include="Commands\CommandHandler.cs" />
     <Compile Include="Commands\ITradeCommand.cs" />
+    <Compile Include="DataManager.cs" />
     <Compile Include="Enums\AttributeEffectTypes.cs" />
-    <Compile Include="Items\AppliedInstanceAttribute.cs" />
-    <Compile Include="Classifieds\ClassifiedsListing.cs" />
-    <Compile Include="Classifieds\ClassifiedsScraper.cs" />
-    <Compile Include="Items\GunMettleSkins.cs" />
-    <Compile Include="Classifieds\ItemSale.cs" />
-    <Compile Include="Classifieds\DealFinder.cs" />
+    <Compile Include="Enums\ItemQualities.cs" />
+    <Compile Include="Enums\ItemSlots.cs" />
     <Compile Include="Enums\KillstreakTypes.cs" />
-    <Compile Include="Lookup\MarketReference.cs" />
-    <Compile Include="Json\MarketPricesJson\MarketPriceDataJson.cs" />
-    <Compile Include="Json\MarketPricesJson\MarketPricesResponseJson.cs" />
-    <Compile Include="Json\MarketPricesJson\MarketPricingJson.cs" />
-    <Compile Include="Market\MarketPricing.cs" />
-    <Compile Include="Utils\Settings.cs" />
-    <Compile Include="Items\Skin.cs" />
+    <Compile Include="Enums\PlayerClasses.cs" />
     <Compile Include="Enums\SkinWears.cs" />
-    <Compile Include="Backpack\Backpack.cs" />
+    <Compile Include="Items\AppliedInstanceAttribute.cs" />
+    <Compile Include="Items\GunMettleSkins.cs" />
+    <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\ItemAttribute.cs" />
+    <Compile Include="Items\ItemInstance.cs" />
+    <Compile Include="Items\ItemSet.cs" />
+    <Compile Include="Items\Skin.cs" />
+    <Compile Include="Items\StrangePart.cs" />
+    <Compile Include="Items\UnusualEffect.cs" />
     <Compile Include="Json\BackpackDataJson\AppliedItemInstanceAttributeJson.cs" />
     <Compile Include="Json\BackpackDataJson\EquipInfoJson.cs" />
     <Compile Include="Json\BackpackDataJson\ItemInstanceJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackJson.cs" />
     <Compile Include="Json\BackpackDataJson\TF2BackpackResultJson.cs" />
-    <Compile Include="CommandHandlerOld.cs" />
-    <Compile Include="Items\ItemAttribute.cs" />
-    <Compile Include="Items\ItemInstance.cs" />
-    <Compile Include="Items\ItemSet.cs" />
-    <Compile Include="Enums\PlayerClasses.cs" />
-    <Compile Include="Items\Item.cs" />
     <Compile Include="Json\ItemDataJson\AppliedAttributeJson.cs" />
-    <Compile Include="Json\ItemDataJson\SpellStringJson.cs" />
-    <Compile Include="Json\ItemDataJson\SpellStringLookupJson.cs" />
-    <Compile Include="Json\ItemDataJson\UnusualEffectJson.cs" />
     <Compile Include="Json\ItemDataJson\AttributeDescriptionFormats.cs" />
     <Compile Include="Json\ItemDataJson\AttributeJson.cs" />
     <Compile Include="Json\ItemDataJson\CapabilitiesJson.cs" />
+    <Compile Include="Json\ItemDataJson\ItemJson.cs" />
     <Compile Include="Json\ItemDataJson\ItemPerClassLoadoutSlotJson.cs" />
     <Compile Include="Json\ItemDataJson\ItemSetJson.cs" />
-    <Compile Include="Enums\ItemSlots.cs" />
     <Compile Include="Json\ItemDataJson\ItemToolDataJson.cs" />
-    <Compile Include="Json\ItemDataJson\StrangeLevelingSystemJson.cs" />
-    <Compile Include="Json\ItemDataJson\StrangeLevelJson.cs" />
-    <Compile Include="Json\ItemDataJson\StrangePartJson.cs" />
-    <Compile Include="Json\ItemDataJson\TF2DataJson.cs" />
-    <Compile Include="Json\ItemDataJson\TF2DataResultJson.cs" />
-    <Compile Include="Json\ItemDataJson\ItemJson.cs" />
     <Compile Include="Json\ItemDataJson\OriginJson.cs" />
     <Compile Include="Json\ItemDataJson\QualitiesListJson.cs" />
     <Compile Include="Json\ItemDataJson\QualitiesNameListJson.cs" />
+    <Compile Include="Json\ItemDataJson\SpellStringJson.cs" />
+    <Compile Include="Json\ItemDataJson\SpellStringLookupJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangeLevelingSystemJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangeLevelJson.cs" />
+    <Compile Include="Json\ItemDataJson\StrangePartJson.cs" />
     <Compile Include="Json\ItemDataJson\StyleJson.cs" />
-    <Compile Include="Enums\ItemQualities.cs" />
-    <Compile Include="Utils\LoggerOld.cs" />
-    <Compile Include="Classifieds\ItemPricing.cs" />
-    <Compile Include="Price.cs" />
-    <Compile Include="Lookup\PriceReference.cs" />
+    <Compile Include="Json\ItemDataJson\TF2DataJson.cs" />
+    <Compile Include="Json\ItemDataJson\TF2DataResultJson.cs" />
+    <Compile Include="Json\ItemDataJson\UnusualEffectJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPriceDataJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPricesResponseJson.cs" />
+    <Compile Include="Json\MarketPricesJson\MarketPricingJson.cs" />
+    <Compile Include="Json\PriceDataJson\BPTFPriceDataJson.cs" />
+    <Compile Include="Json\PriceDataJson\BPTFPriceDataResponseJson.cs" />
     <Compile Include="Json\PriceDataJson\CraftibilityJson.cs" />
+    <Compile Include="Json\PriceDataJson\ItemPriceJson.cs" />
     <Compile Include="Json\PriceDataJson\QualityPriceDataJson.cs" />
     <Compile Include="Json\PriceDataJson\TradabilityJson.cs" />
     <Compile Include="Json\PriceDataJson\TypeIndexPricingJson.cs" />
-    <Compile Include="DataManager.cs" />
-    <Compile Include="Json\PriceDataJson\BPTFPriceDataJson.cs" />
-    <Compile Include="Json\PriceDataJson\BPTFPriceDataResponseJson.cs" />
-    <Compile Include="Json\PriceDataJson\ItemPriceJson.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Items\StrangePart.cs" />
     <Compile Include="Lookup\GameSchema.cs" />
-    <Compile Include="Items\UnusualEffect.cs" />
+    <Compile Include="Lookup\MarketReference.cs" />
+    <Compile Include="Lookup\PriceReference.cs" />
+    <Compile Include="Market\MarketPricing.cs" />
+    <Compile Include="Price.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\LoggerOld.cs" />
+    <Compile Include="Utils\Settings.cs" />
     <Compile Include="Utils\Util.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
