--- a/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
+++ b/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
@@ -47,10 +47,6 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="UltimateUtil, Version=1.0.0.1, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\UltimateUtil.1.0.0.1\lib\UltimateUtil.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Backpack\Backpack.cs" />
@@ -59,7 +55,9 @@
     <Compile Include="Classifieds\DealFinder.cs" />
     <Compile Include="Classifieds\ItemPricing.cs" />
     <Compile Include="Classifieds\ItemSale.cs" />
+    <Compile Include="Classifieds\ListingProperties.cs" />
     <Compile Include="CommandHandlerOld.cs" />
+    <Compile Include="Commands\CmdClassifiedsBase.cs" />
     <Compile Include="Commands\CmdHelp.cs" />
     <Compile Include="Commands\CmdInfo.cs" />
     <Compile Include="Commands\CommandHandler.cs" />
@@ -128,6 +126,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\ultimate-util\UltimateUtil\UltimateUtil\UltimateUtil.csproj">
+      <Project>{927cc5f4-bafb-4683-8ab4-f3eaa2fcd26f}</Project>
+      <Name>UltimateUtil</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
