--- a/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
+++ b/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
@@ -57,9 +57,11 @@
     <Compile Include="Classifieds\ItemSale.cs" />
     <Compile Include="Classifieds\ListingProperties.cs" />
     <Compile Include="CommandHandlerOld.cs" />
+    <Compile Include="Commands\CmdBuyers.cs" />
     <Compile Include="Commands\CmdClassifiedsBase.cs" />
     <Compile Include="Commands\CmdHelp.cs" />
     <Compile Include="Commands\CmdInfo.cs" />
+    <Compile Include="Commands\CmdSellers.cs" />
     <Compile Include="Commands\CommandHandler.cs" />
     <Compile Include="Commands\ITradeCommand.cs" />
     <Compile Include="Commands\PriceCheck.cs" />
@@ -121,6 +123,7 @@
     <Compile Include="Price.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LoggerOld.cs" />
+    <Compile Include="Utils\RetrievalFailedException.cs" />
     <Compile Include="Utils\Settings.cs" />
     <Compile Include="Utils\Util.cs" />
   </ItemGroup>
