--- a/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
+++ b/CustomSteamTools/CustomSteamTools/CustomSteamTools.csproj
@@ -53,17 +53,19 @@
     <Compile Include="Classifieds\ClassifiedsListing.cs" />
     <Compile Include="Classifieds\ClassifiedsScraper.cs" />
     <Compile Include="Classifieds\DealFinder.cs" />
-    <Compile Include="Classifieds\DealFilters.cs" />
+    <Compile Include="Classifieds\Filters.cs" />
     <Compile Include="Classifieds\ItemPricing.cs" />
     <Compile Include="Classifieds\ItemSale.cs" />
     <Compile Include="Classifieds\ListingProperties.cs" />
     <Compile Include="CommandHandlerOld.cs" />
+    <Compile Include="Commands\CmdBackpack.cs" />
     <Compile Include="Commands\CmdBuyers.cs" />
     <Compile Include="Commands\CmdClassifiedsBase.cs" />
     <Compile Include="Commands\CmdDeals.cs" />
     <Compile Include="Commands\CmdHelp.cs" />
     <Compile Include="Commands\CmdInfo.cs" />
     <Compile Include="Commands\CmdKillstreak.cs" />
+    <Compile Include="Commands\CmdRange.cs" />
     <Compile Include="Commands\CmdRefresh.cs" />
     <Compile Include="Commands\CmdSellers.cs" />
     <Compile Include="Commands\CmdSettings.cs" />
@@ -124,9 +126,12 @@
     <Compile Include="Json\PriceDataJson\TypeIndexPricingJson.cs" />
     <Compile Include="Lookup\GameSchema.cs" />
     <Compile Include="Lookup\MarketReference.cs" />
+    <Compile Include="Lookup\PriceCheckResults.cs" />
     <Compile Include="Lookup\PriceReference.cs" />
+    <Compile Include="Lookup\CheckedPrice.cs" />
     <Compile Include="Market\MarketPricing.cs" />
     <Compile Include="Price.cs" />
+    <Compile Include="PriceChecker.cs" />
     <Compile Include="PriceRange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\LoggerOld.cs" />
